--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "build": "tsc"
+    "build": "tsc",
+    "migrate:up": "tsc && npx sequelize db:migrate --migrations-path ./src/migrations",
+    "migrate:down": "tsc && npx sequelize db:migrate:undo:all",
+    "make:migrate": "npx  sequelize migration:generate --migrations-path ./src/migrations --name"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +32,7 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "nodemon": "^3.1.3",
+    "sequelize-cli": "^6.6.2",
     "ts-jest": "^29.1.4",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
