--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
   "include": [
     "src/**/*", // Include all files in the src directory
     "server.ts"
-  ],
+, "src/migrations/20240619201936-UsersTable.js"  ],
   "exclude": [
     "node_modules", // Exclude the node_modules directory
     "**/*.spec.ts",
