--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-joi-validation": "^5.0.1",
+    "joi": "^17.13.3",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tsyringe": "^4.8.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
