--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "build": "tsc",
-    "migrate:up": "tsc && npx sequelize db:migrate --migrations-path ./src/migrations",
+    "dev:migrate:up": "tsc && npx sequelize db:migrate --migrations-path ./src/migrations",
     "migrate:down": "tsc && npx sequelize db:migrate:undo:all",
     "make:migrate": "npx  sequelize migration:generate --migrations-path ./src/migrations --name"
   },
@@ -20,25 +20,30 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
-    "argon2": "^0.40.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "merge-yaml": "^1.1.0",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "tsyringe": "^4.8.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "yaml": "^2.4.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.14.2",
+    "@types/swagger-ui-express": "^4.1.6",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "nodemon": "^3.1.3",
