--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "merge-yaml": "^1.1.0",
-    "pg": "^8.12.0",
+    "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
@@ -47,6 +47,7 @@
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.14.2",
+    "@types/pg": "^8.11.10",
     "@types/swagger-ui-express": "^4.1.6",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
